@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-07T08:10:44Z",
-  "count_outdated" : 70,
-  "uniques_outdated" : 32,
+  "timestamp" : "2022-11-08T16:09:00Z",
+  "count_outdated" : 71,
+  "uniques_outdated" : 33,
   "count" : 73,
   "uniques" : 35,
   "views" : [
-    {
-      "timestamp": "2022-10-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-05T00:00:00Z",
       "count": 1,
