@@ -1,3 +1,11 @@
+2022-11-08T16:09:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3421152376 # 595
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 32 70 / 35 73
+* notice: next accum: outdated-unq outdated-all / unq all: 33 71 / 35 73
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-25] / []
+
 2022-11-07T08:10:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3408593180 # 591
 * notice: last 14d: unq all: 3 3
